(tmux) use Nix home-manager to get plugins instead of tpm

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -191,89 +191,84 @@ set -g popup-border-style "fg=#{@bordercolor}"
 # }}}
 
 # Plugins {{{
-# tmux plugin manager
-set -g @plugin 'tmux-plugins/tpm'
+# tmux-better-mouse-mode
+set -g @scroll-without-changing-pane "on"
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-    set -g @scroll-without-changing-pane "on"
-    set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-
-# Saves the state of tmux to a file so it can be restored later
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-    # TODO: I want to restore any arguments that were passed to neovim, but the problem is that the Nix wrapper
-    # for neovim calls the actual neovim binary with arguments that contain spaces. The only platform
-    # where resurrect can retain spaces in arguments, without splitting them into separate arguments, is Linux
-    # with the 'linux_procfs' strategy. So here I only set arguments to be replaced if I'm on Linux.
-    # issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
+# tmux-resurrect: Saves the state of tmux to a file so it can be restored later
+#
+# TODO: I want to restore any arguments that were passed to neovim, but the problem is that the Nix wrapper
+# for neovim calls the actual neovim binary with arguments that contain spaces. The only platform
+# where resurrect can retain spaces in arguments, without splitting them into separate arguments, is Linux
+# with the 'linux_procfs' strategy. So here I only set arguments to be replaced if I'm on Linux.
+# issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
+set -g @nvim_resurrect '"~nvim->nvim"'
+if-shell "uname | grep -q Linux" {
+    # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as the restore
+    # strategy. Until it's fixed, I will not restore arguments on Linux either for the reason in the TODO above.
     set -g @nvim_resurrect '"~nvim->nvim"'
-    if-shell "uname | grep -q Linux" {
-        # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as the restore
-        # strategy. Until it's fixed, I will not restore arguments on Linux either for the reason in the TODO above.
-        set -g @nvim_resurrect '"~nvim->nvim"'
-    }
-    set -gF @resurrect-processes 'watch viddy mosh-client #{@nvim_resurrect} ssh autossh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared "~nix repl->nix repl"'
-    # This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
-    # e.g. `echo 'one argument with spaces'`. Only supports linux though
-    if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
-    set -g @resurrect-capture-pane-contents 'on'
+}
+set -gF @resurrect-processes 'watch viddy mosh-client #{@nvim_resurrect} ssh autossh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared "~nix repl->nix repl"'
+# This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
+# e.g. `echo 'one argument with spaces'`. Only supports linux though
+if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
+set -g @resurrect-capture-pane-contents 'on'
+# TODO: The version of tmux-resurrect on nixpkgs is very old so I have to specify this
+set -g @resurrect-dir '~/.local/share/tmux/resurrect'
 
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-    set -g @prefix_symbol "\uf80b "
-    set -g @copy_symbol "\uf68e "
-    set -g @sync_symbol "\uf46a "
-    set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_empty_prompt '#[bg=default] '
+# tmux-mode-indicator
+set -g @prefix_symbol "\uf80b "
+set -g @copy_symbol "\uf68e "
+set -g @sync_symbol "\uf46a "
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_empty_prompt '#[bg=default] '
 
-set -g @plugin 'MunifTanjim/tmux-suspend'
-    set -g @suspended_symbol "\uf80e "
-    set -g @suspend_key 'M-z'
-    set -g @suspend_suspended_options " \
-        pane-active-border-style::fg=#{@standoutcolor} dim, \
-        pane-border-style::fg=#{@bordercolor} dim, \
-        @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} suspended, \
-        status-style::dim, \
-    "
+# tmux-suspend
+# TODO: It's not in nixpkgs :(
+set -g @suspended_symbol "\uf80e "
+set -g @suspend_key 'M-z'
+set -g @suspend_suspended_options " \
+    pane-active-border-style::fg=#{@standoutcolor} dim, \
+    pane-border-style::fg=#{@bordercolor} dim, \
+    @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} suspended, \
+    status-style::dim, \
+"
 
-set -g @plugin 'tmux-plugins/tmux-battery'
-    set -g @batt_color_charge_primary_tier8 'default'
-    set -g @batt_color_charge_primary_tier7 'default'
-    set -g @batt_color_charge_primary_tier6 'default'
-    set -g @batt_color_charge_primary_tier5 'default'
-    set -g @batt_color_charge_primary_tier4 'default'
-    set -g @batt_color_charge_primary_tier3 'default'
-    set -g @batt_color_charge_primary_tier2 'colour1'
-    set -g @batt_color_charge_primary_tier1 'colour1'
-    set -g @batt_color_status_primary_charged 'colour2'
-    set -g @batt_color_status_primary_charging 'colour3'
-    set -g @batt_color_status_primary_unknown '0'
-    set -g @batt_color_status_primary_discharging '0'
-    set -g @batt_icon_status_discharging "0"
-    set -g @batt_icon_status_charging "1"
-    set -g @batt_icon_status_charged "1"
-    set -g @batt_icon_status_unknown "2"
-    set -g @batt_icon_charge_tier8 "7"
-    set -g @batt_icon_charge_tier7 "6"
-    set -g @batt_icon_charge_tier6 "5"
-    set -g @batt_icon_charge_tier5 "4"
-    set -g @batt_icon_charge_tier4 "3"
-    set -g @batt_icon_charge_tier3 "2"
-    set -g @batt_icon_charge_tier2 "1"
-    set -g @batt_icon_charge_tier1 "0"
+# tmux-battery
+set -g @batt_color_charge_primary_tier8 'default'
+set -g @batt_color_charge_primary_tier7 'default'
+set -g @batt_color_charge_primary_tier6 'default'
+set -g @batt_color_charge_primary_tier5 'default'
+set -g @batt_color_charge_primary_tier4 'default'
+set -g @batt_color_charge_primary_tier3 'default'
+set -g @batt_color_charge_primary_tier2 'colour1'
+set -g @batt_color_charge_primary_tier1 'colour1'
+set -g @batt_color_status_primary_charged 'colour2'
+set -g @batt_color_status_primary_charging 'colour3'
+set -g @batt_color_status_primary_unknown '0'
+set -g @batt_color_status_primary_discharging '0'
+set -g @batt_icon_status_discharging "0"
+set -g @batt_icon_status_charging "1"
+set -g @batt_icon_status_charged "1"
+set -g @batt_icon_status_unknown "2"
+set -g @batt_icon_charge_tier8 "7"
+set -g @batt_icon_charge_tier7 "6"
+set -g @batt_icon_charge_tier6 "5"
+set -g @batt_icon_charge_tier5 "4"
+set -g @batt_icon_charge_tier4 "3"
+set -g @batt_icon_charge_tier3 "2"
+set -g @batt_icon_charge_tier2 "1"
+set -g @batt_icon_charge_tier1 "0"
 
-set -g @plugin 'tmux-plugins/tmux-online-status'
-    set -g @online_icon "#[fg=colour4] #{@internet_connected_symbol}"
-    set -g @offline_icon "#[fg=colour1] #{@internet_disconnected_symbol}"
+# tmux-online-status
+set -g @online_icon "#[fg=colour4] #{@internet_connected_symbol}"
+set -g @offline_icon "#[fg=colour1] #{@internet_disconnected_symbol}"
 
-set -g @plugin 'levex/tmux-plugin-volume'
+# TODO: tmux-plugin-volume is not in nixpkgs :(
 
-# Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
-# NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
-set -g @plugin 'tmux-plugins/tmux-continuum'
-    set -g @continuum-restore 'on' # Automatically restore session when tmux is started
-    set -g @continuum-save-interval '1' # measured in minutes
-
-# Start the plugin manager
-run '~/.tmux/plugins/tpm/tpm'
+# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
+set -g @continuum-restore 'on' # Automatically restore session when tmux is started
+set -g @continuum-save-interval '1' # measured in minutes
 # }}}
