--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,7 +64,7 @@ bind-key -n M-L next-window
 # toggle zoom on pane
 bind-key -n M-m resize-pane -Z
 # change highlight color
-set -g mode-style "fg=terminal,bg=colour8"
+set -g mode-style "fg=colour0,bg=colour4"
 set -g fill-character '╱'
 # resize panes
 bind-key -n M-Left resize-pane -L
