(tmux) alt+t goes to the _last_ terminal, not the previous one

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,7 +85,7 @@ bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
 # scratchpad session
 bind -n M-t if-shell -F '#{==:#{session_name},scratch}' {
-    switch-client -p
+    switch-client -l
 } {
     new-session -A -c '#{pane_current_path}' -s scratch 
 }
