(tmux) after closing the last pane in a session, join another active one instead of exiting to parent shell

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,7 @@ set-option -g allow-passthrough on
 # The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
 set-option -g focus-events on
 set -g set-clipboard on
+set-option -g detach-on-destroy off
 
 # By setting a default-command, tmux won't use its default behaviour which creates a login shell
 # for new windows.
