--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -133,7 +133,7 @@ set -g status-position bottom
 set -g pane-border-status bottom
 
 # Panes
-set -g pane-border-lines heavy
+set -g pane-border-lines single
 set -g pane-active-border-style "fg=colour6"
 set -g pane-border-style "fg=colour15"
 
