--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -s escape-time 0
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
-set -g pane-border-format ''
+set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold fg=colour3] #{@copy_symbol} COPY ,}'
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
@@ -125,7 +125,7 @@ set-option -g history-limit 50000
 
 # Aesthetics {{{
 set -g @bordercolor 'colour8'
-set -g @standoutcolor 'colour6'
+set -g @standoutcolor 'colour5'
 set -g @bgcolor 'terminal'
 
 # status bar configuration
@@ -219,19 +219,20 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @prefix_symbol "\uf80b "
 set -g @copy_symbol "\uf68e "
 set -g @sync_symbol "\uf46a "
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
-set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]#{@prefix_symbol} PREFIX"
 set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_copy_prompt '#[bg=default] '
 set -g @mode_indicator_empty_prompt '#[bg=default] '
 
 # tmux-suspend
 set -g @suspended_symbol "\uf80e "
 set -g @suspend_key 'M-z'
+# I prepend pane-border-format instead of overwriting so if two windows are in a mode, e.g. copy and suspended, they
+# will both be given border text.
 set -g @suspend_suspended_options " \
     pane-active-border-style::fg=#{@standoutcolor} dim, \
-    pane-border-style::fg=#{@bordercolor} dim, \
-    @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} suspended, \
     status-style::dim, \
+    pane-border-format::#{l:#{?pane_active\\,#[fg=#{@standoutcolor}# nounderscore] #{@suspended_symbol} suspended \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-battery
