--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,7 @@ bind t new-window -c "#{pane_current_path}"
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
 bind-key -n M-s choose-tree -Zs
+bind s run-shell -b "${TMUX_PLUGIN_MANAGER_PATH}resurrect/scripts/save.sh"
 
 # Border characters for statusbar indicators
 set -g @left_symbol "\ue0b6"
