(tmux) tweak suspended indicator

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -228,12 +228,13 @@ set -g @mode_indicator_empty_prompt '#[bg=default] '
 # tmux-suspend
 set -g @suspended_symbol "\uf80e "
 set -g @suspend_key 'M-z'
-# I prepend pane-border-format instead of overwriting so if two windows are in a mode, e.g. copy and suspended, they
-# will both be given border text.
+# I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy and suspended),
+# or one window is in two modes, both border indicators will be displayed.
+#
+# The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
+# pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-active-border-style::fg=#{@standoutcolor} dim, \
-    status-style::dim, \
-    pane-border-format::#{l:#{?pane_active\\,#[fg=#{@standoutcolor}# nounderscore] #{@suspended_symbol} suspended \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[bold fg=#{@standoutcolor}] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-battery
