(nix) always show full stack trace of errors

--- a/nix/nix.conf
+++ b/nix/nix.conf
@@ -3,3 +3,5 @@ experimental-features = nix-command flakes
 # nix-direnv needs these two in order to work
 keep-derivations = true
 keep-outputs = true
+
+show-trace = true
