make sure the terminal is running in 256 color mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 # Miscellaneous {{{
 # allow mouse use
 set-option -g mouse on
-# let colors pass through
+# Set the terminal's color capability to 256 colors. TMUX will then set its $TERM environment variable to this value.
 set -g default-terminal "tmux-256color"
 # don't allow programs running in a pane to change the window title with an escape sequence
 set-option -g allow-rename off
