--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Upload executable
         uses: svenstaro/upload-release-action@v2
         with:
-          file: shell
+          file: '${{ env.HOME }}/.dotfiles/shell'
           overwrite: true
           repo_token: ${{ secrets.GITHUB_TOKEN }}
