--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -5,7 +5,8 @@ on:
       - '**'
       - '!README.md'
       - '!.*'
-      - '.meta'
+      # for the nix files in a folder like .meta/
+      - '**.nix'
       - '.github/workflows/publish-shell-executable.yml'
     branches:
       - master
