(tmux) remove all the status tray icons in the status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -154,8 +154,6 @@ set -g status-style "bg=#{@bgcolor},fg=terminal,push-default"
 set -g window-status-format ''
 set -g window-status-current-format ''
 
-set -g @internet_connected_symbol "\uf1eb "
-set -g @internet_disconnected_symbol "\uf1eb "
 set -g @new_window_symbol "＋"
 set -g @zoom_indicator " \uf792 "
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
@@ -165,27 +163,8 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
 
-set -g @volume_symbol "\uf028 "
-set -g @volume-percentage "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-plugin-volume/scripts/volume_percentage.sh)"
-set -g @volume-tray-icon "#[fg=default]#{?#{E:@volume-percentage},#{@volume_symbol}#{E:@volume-percentage}%,}"
-set -g @get_battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
-set -g @battery-percentage "#[fg=default]#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_percentage.sh)"
-set -g @battery-status-script "${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_icon_status.sh"
-set -g @battery-status "#(#{@battery-status-script})"
-set -g @battery-charge-script "${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_icon_charge.sh"
-set -g @battery-charge "#(#{@battery-charge-script})"
-set -g @battery-status-fg "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_color_status.sh fg)"
-set -g @battery-charge-fg "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_color_charge.sh fg)"
-set -g @battery-icon-color "#{?#{==:#{E:@battery-status},1},#{E:@battery-status-fg},#{E:@battery-charge-fg}}"
-set -g @battery-icon "#{E:@battery-icon-color}#(#{@get_battery_icon} \"$(#{@battery-status-script})\" \"$(#{@battery-charge-script})\")"
-set -g @battery-tray-icon "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
-set -g @separator "#[fg=colour8]│"
-set -g @datetime "#[fg=default]%a, %b %-e %H:%M:%S"
-set -g @online-tray-icon "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-online-status/scripts/online_status_icon.sh)"
-set -g @tray-icons "#{E:@online-tray-icon}  #{E:@volume-tray-icon} #{E:@battery-tray-icon}"
-set -g @tty-info "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@tray-icons} #{E:@separator} #{E:@datetime} #{E:@separator} ,}"
 set -g @session "#[range=left]#[bg=default,fg=default]#S"
-set -g status-right "#{E:@tty-info}#{E:@session} "
+set -g status-right "#{E:@session} "
 set -g status-right-length 999
 
 set -g popup-border-lines heavy
@@ -236,36 +215,6 @@ set -g @suspend_key 'M-z'
 set -g @suspend_suspended_options " \
     pane-border-format::#{l:#{?pane_active\\,#[bold fg=#{@standoutcolor}] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
-
-# tmux-battery
-set -g @batt_color_charge_primary_tier8 'default'
-set -g @batt_color_charge_primary_tier7 'default'
-set -g @batt_color_charge_primary_tier6 'default'
-set -g @batt_color_charge_primary_tier5 'default'
-set -g @batt_color_charge_primary_tier4 'default'
-set -g @batt_color_charge_primary_tier3 'default'
-set -g @batt_color_charge_primary_tier2 'colour1'
-set -g @batt_color_charge_primary_tier1 'colour1'
-set -g @batt_color_status_primary_charged 'colour2'
-set -g @batt_color_status_primary_charging 'colour3'
-set -g @batt_color_status_primary_unknown '0'
-set -g @batt_color_status_primary_discharging '0'
-set -g @batt_icon_status_discharging "0"
-set -g @batt_icon_status_charging "1"
-set -g @batt_icon_status_charged "1"
-set -g @batt_icon_status_unknown "2"
-set -g @batt_icon_charge_tier8 "7"
-set -g @batt_icon_charge_tier7 "6"
-set -g @batt_icon_charge_tier6 "5"
-set -g @batt_icon_charge_tier5 "4"
-set -g @batt_icon_charge_tier4 "3"
-set -g @batt_icon_charge_tier3 "2"
-set -g @batt_icon_charge_tier2 "1"
-set -g @batt_icon_charge_tier1 "0"
-
-# tmux-online-status
-set -g @online_icon "#[fg=colour4] #{@internet_connected_symbol}"
-set -g @offline_icon "#[fg=colour1] #{@internet_disconnected_symbol}"
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 set -g @continuum-restore 'on' # Automatically restore session when tmux is started
