--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,6 +83,7 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+# Make a new window by clicking the new window button
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
 
 # scratchpad session
