--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -35,8 +35,8 @@ jobs:
           name: bigolu
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix bundle --update-input my-overlay --show-trace --bundler .# .#
-      # Dereference the symlink so the upload works properly. The name will look like 'shell-x86_64.AppImage' so I'm
-      # using a glob pattern to match it.
+      # Dereference the symlink so I can upload the actual executable. The symlink name will look like
+      # 'shell-x86_64.AppImage' so I'm using a glob pattern to match it.
       - run: cp -L shell-* shell
       - name: Upload executable
         uses: svenstaro/upload-release-action@v2
