--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,9 +56,9 @@ set -g @right_symbol "\ue0b4"
 set -g @reload_symbol "\ue348 "
 bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
-bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell -C 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
-bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell -C 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
-bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell -C 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
+bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
+bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
+bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 
 # navigate windows. These keys are sent by the terminal since the actual keys I use, ctrl+shift+{[,]}, don't work now
 # since TMUX lost suuport for extended keys.
