--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,7 +60,7 @@ bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.
 bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 
-# navigate windows. These keys are sent by the terminal since the actual keys I use, ctrl+shift+{[,]}, don't work now
+# navigate windows. These keys are sent by the terminal since the actual keys I use don't work now
 # since TMUX lost suuport for extended keys.
 # TODO: tmux issue: https://github.com/tmux/tmux/issues/2705#issuecomment-841133549
 bind-key -n F10 previous-window
