--- a/home/dotfiles/tmux/tmux.conf
+++ b/home/dotfiles/tmux/tmux.conf
@@ -201,7 +201,7 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @prefix_symbol "\uf80b "
+set -g @prefix_symbol "\U000F030C "
 set -g @copy_symbol "\uf68e "
 set -g @sync_symbol "\uf46a "
 set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]#{@prefix_symbol} PREFIX"
@@ -210,7 +210,7 @@ set -g @mode_indicator_copy_prompt '#[bg=default] '
 set -g @mode_indicator_empty_prompt '#[bg=default] '
 
 # tmux-suspend
-set -g @suspended_symbol "\uf80e "
+set -gF @suspended_symbol "\U000F030F "
 set -g @suspend_key 'M-z'
 # I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy and suspended),
 # or one window is in two modes, both border indicators will be displayed.
