optimize the nix store by default

--- a/dotfiles/nix/nix.conf
+++ b/dotfiles/nix/nix.conf
@@ -1,7 +1,11 @@
 experimental-features = nix-command flakes
 
+# Save space in the Nix store by replacing identical files with hardlinks.
+auto-optimise-store = true
+
+# Always show the entire stack of an error.
+show-trace = true
+
 # nix-direnv needs these two in order to work
 keep-derivations = true
 keep-outputs = true
-
-show-trace = true
