(tmux) change new window symbol

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -159,7 +159,7 @@ set -g status-style "bg=#{@bgcolor},fg=terminal,push-default"
 set -g window-status-format ''
 set -g window-status-current-format ''
 
-set -g @new_window_symbol "＋"
+set -g @new_window_symbol "\uea60 "
 set -g @zoom_indicator " \uf792 "
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
