(tmux) fix: use the new hex for the copy symbol

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -200,7 +200,7 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
 set -g @prefix_symbol "\U000F030C "
-set -g @copy_symbol "\uf68e "
+set -g @copy_symbol "\U000f018f "
 set -g @sync_symbol "\uf46a "
 set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]#{@prefix_symbol} PREFIX"
 set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
