(tmux) make a section in config for bindings

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -10,7 +10,6 @@ set-option -g allow-rename off
 # Let tmux automatically rename windows, unless I manually set a name for that window
 set -g automatic-rename on
 set-option -g renumber-windows on
-bind-key -n MouseDrag1Status swap-window -d -t=
 setw -g aggressive-resize on
 set -s escape-time 0
 # have window indices start from 1
@@ -40,22 +39,40 @@ set-option -g detach-on-destroy off
 # the default-command. (Maybe TMUX should run the default-command with `exec`)
 # set -g default-command "${SHELL}"
 
-# Create a new window using the current pane's directory as the new window's directory
-bind t new-window -c "#{pane_current_path}"
-# split panes horizontally/vertically using the current pane's directory as the new pane's directory
-bind '|' split-window -h -c '#{pane_current_path}'
-bind '-' split-window -v -c '#{pane_current_path}'
-bind-key -n M-s choose-tree -Zs
-bind s run-shell -b "${TMUX_PLUGIN_MANAGER_PATH}resurrect/scripts/save.sh"
-
 # Border characters for statusbar indicators
 set -g @left_symbol "\ue0b6"
 set -g @right_symbol "\ue0b4"
+
+# change highlight color
+set -g mode-style "fg=colour0,bg=colour3"
+set -g fill-character '╱'
+
+# Enable hyperlinks
+set -ga terminal-features "*:hyperlinks"
+
+# Clipboard copying
+set -ga terminal-features "*:clipboard"
+# TODO: I might not need this if tmux's default copy command works when tmux is being run remotely
+set -g copy-command "pbcopy"
+
+set-option -g status-keys emacs
+
+set-option -g history-limit 50000
+# }}}
+
+# Bindings {{{
+# reorder windows by dragging the mouse
+bind-key -n MouseDrag1Status swap-window -d -t=
+
+# Create a new window using the current pane's directory as the new window's directory
+bind t new-window -c "#{pane_current_path}"
 
 # reload
 set -g @reload_symbol "\ue348 "
 bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
+# Open the url under the cursor in the browser. My graphical terminal emulator can do this, but it doesn't work when
+# the url spans multiple lines in a tmux pane, since my graphical terminal is not aware of the tmux pane boundaries.
 bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
@@ -65,16 +82,16 @@ bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.
 # TODO: tmux issue: https://github.com/tmux/tmux/issues/2705#issuecomment-841133549
 bind-key -n F10 previous-window
 bind-key -n F12 next-window
+
 # toggle zoom on pane
 bind-key -n M-m resize-pane -Z
-# change highlight color
-set -g mode-style "fg=colour0,bg=colour3"
-set -g fill-character '╱'
+
 # resize panes
 bind-key -n M-Left resize-pane -L
 bind-key -n M-Right resize-pane -R
 bind-key -n M-Up resize-pane -U
 bind-key -n M-Down resize-pane -D
+
 # switch windows with alt+<window number>
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
@@ -85,8 +102,10 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+
 # Make a new window by clicking the new window button
 bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
+
 # Go to the last (previously selected) window
 bind-key -n M-BSpace last-window
 
@@ -106,14 +125,7 @@ bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D -Z'
 bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U -Z'
 bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R -Z'
 
-# Enable hyperlinks
-set -ga terminal-features "*:hyperlinks"
-
-# Clipboard copying
-set -ga terminal-features "*:clipboard"
-# TODO: I might not need this if tmux's default copy command works when tmux is being run remotely
-set -g copy-command "pbcopy"
-
+# Open context menus on right click
 bind-key -T root MouseDown3Pane \
     if-shell -F -t = "#{||:#{mouse_any_flag},#{&&:#{pane_in_mode},#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}$}}" \
         { \
@@ -131,13 +143,11 @@ bind-key -T root MouseDown3Pane \
                 Respawn R { respawn-pane -k } \
                 "#{?#{>:#{window_panes},1},,-}#{?window_zoomed_flag,Unzoom,Zoom}" z { resize-pane -Z } \
         }
-
 bind-key -T root MouseDown3Status \
     display-menu -O -T "#[align=centre]#{window_index}:#{window_name}" -t = -x W -y W \
         Kill X { kill-window } \
         Respawn R { respawn-window -k } \
         Rename n { command-prompt -F -I "#W" { rename-window -t "#{window_id}" "%%" } }
-
 bind-key -T root MouseDown3StatusLeft \
     display-menu -O -T "#[align=centre]#{session_name}" -t = -x M -y W \
         Renumber N { move-window -r } \
@@ -147,9 +157,10 @@ bind-key -T root MouseDown3StatusLeft \
         "New Window" w { new-window } \
         "Choose Session" alt+s { choose-tree -Zs }
 
-set-option -g status-keys emacs
-
-set-option -g history-limit 50000
+bind '|' split-window -h -c '#{pane_current_path}'
+bind '-' split-window -v -c '#{pane_current_path}'
+bind-key -n M-s choose-tree -Zs
+bind s run-shell -b "${TMUX_PLUGIN_MANAGER_PATH}resurrect/scripts/save.sh"
 # }}}
 
 # Aesthetics {{{
