(tmux) only use a title on the window context menu

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -132,7 +132,7 @@ bind-key -T root MouseDown3Pane \
             select-pane -t = ; send-keys -M \
         } \
         { \
-            display-menu -O -T "#[align=centre]#{pane_index} (#{pane_id})" -t = -x M -y M \
+            display-menu -O -t = -x M -y M \
                 "Vertical Split" v { split-window -h -c "#{pane_current_path}" } \
                 "Horizontal Split" h { split-window -v -c "#{pane_current_path}" } \
                 '' \
@@ -149,7 +149,7 @@ bind-key -T root MouseDown3Status \
         Respawn R { respawn-window -k } \
         Rename n { command-prompt -F -I "#W" { rename-window -t "#{window_id}" "%%" } }
 bind-key -T root MouseDown3StatusLeft \
-    display-menu -O -T "#[align=centre]#{session_name}" -t = -x M -y W \
+    display-menu -O -t = -x M -y W \
         Renumber N { move-window -r } \
         Rename n { command-prompt -I "#S" { rename-session "%%" } } \
         '' \
