--- a/dotfiles/nix/nix.conf
+++ b/dotfiles/nix/nix.conf
@@ -1,7 +1,7 @@
 experimental-features = nix-command flakes
 
-# Save space in the Nix store by replacing identical files with hardlinks.
-auto-optimise-store = true
+# This is buggy: https://github.com/NixOS/nix/issues/7273
+auto-optimise-store = false
 
 # Always show the entire stack of an error.
 show-trace = true
