correction in comment

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -71,8 +71,8 @@ bind t new-window -c "#{pane_current_path}"
 set -g @reload_symbol "\ue348 "
 bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
-# Open the url under the cursor in the browser. My graphical terminal emulator can do this, but it doesn't work when
-# the url spans multiple lines in a tmux pane, since my graphical terminal is not aware of the tmux pane boundaries.
+# Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
+# the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
 bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
 bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" >/dev/null 2>&1' \; send-keys -M
