fix: limit the number of goroutines running concurrently
The shell failed to start once because I exceeded the soft-max number of kernel threads set with `ulimit`. I now also stop execution of the goroutines if one of them returns an error and return that error.

--- a/flake-modules/bundler/gozip/gomod2nix.toml
+++ b/flake-modules/bundler/gozip/gomod2nix.toml
@@ -4,3 +4,6 @@ schema = 3
   [mod."github.com/klauspost/compress"]
     version = "v1.16.5"
     hash = "sha256-m4wBSvrFyp//S4dB6S9ggEVFxNWTiJ8RBuucscuMDAs="
+  [mod."golang.org/x/sync"]
+    version = "v0.2.0"
+    hash = "sha256-hKk9zsy2aXY7R0qGFZhGOVvk5qD17f6KHEuK4rGpTsg="
