(nix) don't warn me that the git repository is dirty

--- a/dotfiles/nix/nix.conf
+++ b/dotfiles/nix/nix.conf
@@ -9,3 +9,6 @@ show-trace = true
 # nix-direnv needs these two in order to work
 keep-derivations = true
 keep-outputs = true
+
+# Don't warn me that the git repository is dirty
+warn-dirty = false
