--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -228,7 +228,7 @@ if-shell "uname | grep -q Linux" {
     # strategy. Until it's fixed, I will not restore arguments on Linux either for the reason in the TODO above.
     set -g @nvim_resurrect '"~nvim->nvim"'
 }
-set -gF @resurrect-processes 'watch viddy mosh-client #{@nvim_resurrect} ssh autossh man less tail fzf "git ui" gitui ncdu cloudflared "~nix repl->nix repl" "~manix->manix"'
+set -gF @resurrect-processes 'watch viddy mosh-client #{@nvim_resurrect} ssh autossh man less tail fzf "git ui" ncdu cloudflared "~nix repl->nix repl" "~manix->manix"'
 # This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
 # e.g. `echo 'one argument with spaces'`. Only supports linux though
 if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
