--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -33,11 +33,7 @@ set-option -g detach-on-destroy off
 # WARNING: Don't set this value to anything 'too complicated' since it will break tmux resurrect. Values that are known
 # to break it are 'exec ${SHELL}' and anything containing '&&' or '||'.
 # issue: https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_pane_contents.md#known-issue
-#
-# TODO: Setting this breaks tmux-resurrect because the default-command will be become a child process of the pane and
-# tmux-resurrect will restore the default-command process instead of what we actually want to restore, the child of
-# the default-command. (Maybe TMUX should run the default-command with `exec`)
-# set -g default-command "${SHELL}"
+set -g default-command "${SHELL}"
 
 # Border characters for statusbar indicators
 set -g @left_symbol "\ue0b6"
