use a tmux variable for is_vim instead of an environment variable

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -114,12 +114,11 @@ bind -n M-t if-shell -F '#{==:#{session_name},scratch}' {
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L -Z'
-bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D -Z'
-bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U -Z'
-bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R -Z'
+set -g @is_vim "ps -o state= -o comm= -t \"$(tmux display-message -p '#{pane_tty}')\" | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n M-h if-shell "#{@is_vim}" 'send-keys M-h'  'select-pane -L -Z'
+bind-key -n M-j if-shell "#{@is_vim}" 'send-keys M-j'  'select-pane -D -Z'
+bind-key -n M-k if-shell "#{@is_vim}" 'send-keys M-k'  'select-pane -U -Z'
+bind-key -n M-l if-shell "#{@is_vim}" 'send-keys M-l'  'select-pane -R -Z'
 
 # Open context menus on right click
 bind-key -T root MouseDown3Pane \
