--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -9,6 +9,7 @@ set -g default-terminal "tmux-256color"
 set-option -g allow-rename off
 # Let tmux automatically rename windows, unless I manually set a name for that window
 set -g automatic-rename on
+set -g automatic-rename-format '#{pane_title}'
 set-option -g renumber-windows on
 setw -g aggressive-resize on
 set -s escape-time 0
