(tmux) dim the statusline when the window loses focus

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -183,7 +183,11 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=#{@bgcolor},fg=terminal,push-default"
+set -g @accentcolor 'colour6'
+set -g @fgcolor 'terminal'
+set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
+set-hook -g client-focus-in "set -g @accentcolor 'colour6'; set -g @fgcolor 'terminal'"
+set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 
 # Remove the window status. I'll add it to the statusbar manually
 set -g window-status-format ''
@@ -193,7 +197,7 @@ set -g @new_window_symbol "\uea60 "
 set -g @zoom_indicator " \U000f0293 "
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]#{@zoom_indicator},}#[nounderscore]"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]#(#{@superscript_number} #I)#[fg=default] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]#{@zoom_indicator},}#[nounderscore]"
 set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15]#{@new_window_symbol}"
 set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
